--- a/notsourcecode/apps/index.html
+++ b/notsourcecode/apps/index.html
@@ -50,7 +50,7 @@
          {
             "name": "Cool Math Games",
             "url": "https://science.lonelytab.ga/?url=https://tiktok.com",
-            "img": "thumbnails/coolmatm.png",
+            "img": "thumbnails/coolmath.png",
         },  
          {
             "name": "Geforce Now",
