--- a/notsourcecode/apps/index.html
+++ b/notsourcecode/apps/index.html
@@ -49,7 +49,7 @@
         },       
          {
             "name": "Cool Math Games",
-            "url": "https://science.lonelytab.ga/?url=https://tiktok.com",
+            "url": "https://science.lonelytab.ga/?url=https://coolmathgames.com",
             "img": "thumbnails/coolmath.png",
         },  
          {
