--- a/notsourcecode/g/index.html
+++ b/notsourcecode/g/index.html
@@ -18,12 +18,8 @@
         <!--START NAVBAR-->
         <div class="navbar navbar-fixed-top">
             <ul class="nav">
-                <a style="margin: auto;" class="brand" href="#">Imperium Proxies</a>
-                <li><a class="active" href="../">Home</a></li>
-                <li><a href="#">Games</a></li>
-                <li><a href="../info/index.html">Info</a></li>
-                <li><a href="../apps/index.html">Apps</a></li>
-                <li><a href="https://v3.bigfootgaming.tk" class="right">Bigfoot's Game Shack</a></li>
+                                
+                <li><a href="../p/index.html">Proxies</a></li><li><a href="../settings/index.html">Settings</a></li><li><a href="../apps/index.html">Apps</a></li><li><a href="#">Games</a></li><li><a href="../info/index.html">Info</a></li><li><a class="active" href="../">Home</a></li>
               </ul>
         </div>
             <div class="gameslist">
