--- a/notsourcecode/apps/index.html
+++ b/notsourcecode/apps/index.html
@@ -13,19 +13,19 @@
         <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Space%20Mono" rel="stylesheet">
         <link rel="stylesheet" href="../styles/fonts/remixicon.css">       
+        
         <script src="../scripts/lock.js"></script>  
     </head>
     <body oncontextmenu="return false;">
         <!--START NAVBAR-->
-        <div class="navbar navbar-fixed-top">
-            <ul class="nav">
-                <a style="margin: auto;" class="brand" href="#">Imperium Proxies</a>
-                <li><a class="active" href="../">Home</a></li>
-                <li><a href="../g/index.html">Games</a></li>
-                <li><a href="../info/index.html">Info</a></li>
-                <li><a href="#">Apps</a></li>
-                <li><a href="https://v3.bigfootgaming.tk" class="right">Bigfoot's Game Shack</a></li>
-              </ul>
+        <div class="navbar1">
+        <h2>Imperium</h2>
+        <h3><a href="../p/index.html">Proxies</a><a href="../settings/index.html">Settings</a><a class="active" href="../">Home</a>
+        <a href="../g/index.html">Games</a>
+        <a href="../info/index.html">Info</a>
+        <a href="#">Apps</a>
+        <a href="https://v3.bigfootgaming.tk" class="right">Bigfoot's Game Shack</a></h3>
+        
         </div>
             <div class="gameslist">
                 <div class="row">
