--- a/notsourcecode/apps/index.html
+++ b/notsourcecode/apps/index.html
@@ -19,12 +19,14 @@
     <body oncontextmenu="return false;">
         <!--START NAVBAR-->
         <div class="navbar1">
-        <h2>Imperium</h2>
-        <h3><a href="../p/index.html">Proxies</a><a href="../settings/index.html">Settings</a><a class="active" href="../">Home</a>
-        <a href="../g/index.html">Games</a>
-        <a href="../info/index.html">Info</a>
-        <a href="#">Apps</a>
-        <a href="https://v3.bigfootgaming.tk" class="right">Bigfoot's Game Shack</a></h3>
+        <h2 class="logonav">Imperium</h2>
+        <h3><a href="../p/index.html">Proxies</a></h3>
+        <h3><a class="active" href="../">Home</a></h3>
+        <h3><a href="../settings/index.html">Settings</a></h3>
+        <h3><a href="../g/index.html">Games</a></h3>
+        <h3><a href="../info/index.html">Info</a></h3>
+        <h3><a href="#">Apps</a></h3>
+        <h3><a href="https://v3.bigfootgaming.tk" class="right">Bigfoot's Game Shack</a></h3>
         
         </div>
             <div class="gameslist">
