--- a/notsourcecode/apps/index.html
+++ b/notsourcecode/apps/index.html
@@ -27,8 +27,8 @@
         <h3><a href="../info/index.html">Info</a></h3>
         <h3><a href="#">Apps</a></h3>
         <h3><a href="https://v3.bigfootgaming.tk" class="right">Bigfoot's Game Shack</a></h3>
-        
         </div>
+        <!--END NAVBAR-->
             <div class="gameslist">
                 <div class="row">
                 <div style="padding-left: 20px"id="buttonDiv"></div>
