--- a/notsourcecode/g/index.html
+++ b/notsourcecode/g/index.html
@@ -16,12 +16,17 @@
     </head>
     <body oncontextmenu="return false;">
         <!--START NAVBAR-->
-        <div class="navbar navbar-fixed-top">
-            <ul class="nav">
-                                
-                <li><a href="../p/index.html">Proxies</a></li><li><a href="../settings/index.html">Settings</a></li><li><a href="../apps/index.html">Apps</a></li><li><a href="#">Games</a></li><li><a href="../info/index.html">Info</a></li><li><a class="active" href="../">Home</a></li>
-              </ul>
-        </div>
+        <div class="navbar1">
+            <h2 class="logonav">Imperium Games</h2>
+            <h3><a class="active" href="../index.html">Home</a></h3>
+            <h3><a href="../p/index.html">Proxies</a></h3>
+            <h3><a href="../settings/index.html">Settings</a></h3>
+            <h3><a href="#">Games</a></h3>
+            <h3><a href="../info/index.html">Info</a></h3>
+            <h3><a href="../apps/index.html">Apps</a></h3>
+            <h3><a href="https://v3.bigfootgaming.tk" class="right">Bigfoot's Game Shack</a></h3>
+            </div>
+            <!--END NAVBAR-->
             <div class="gameslist">
                 <div class="row">
                 <div style="padding-left: 20px"id="buttonDiv"></div>
