--- a/notsourcecode/settings/index.html
+++ b/notsourcecode/settings/index.html
@@ -17,17 +17,17 @@
     </head>
     <body oncontextmenu="return false;">
         <!--START NAVBAR-->
-        <div class="navbar navbar-fixed-top">
-            <ul class="nav">
-                <a style="margin: auto;" class="brand" href="#">Imperium Proxies</a>
-                <li><a class="active" href="../">Home</a></li>
-                <li><a href="../g/index.html">Games</a></li>
-                <li><a href="../info/index.html">Info</a></li>
-                <li><a href="#">Apps</a></li>
-                <li><a href="../p/index.html">Proxies</a></li><li><a href="../settings/index.html">Settings</a></li>
-                <li><a href="https://v3.bigfootgaming.tk" class="right">Bigfoot's Game Shack</a></li>
-              </ul>
-        </div>
+        <div class="navbar1">
+            <h2 class="logonav">Imperium</h2>
+            <h3><a href="../p/index.html">Proxies</a></h3>
+            <h3><a class="active" href="../">Home</a></h3>
+            <h3><a href="../settings/index.html">Settings</a></h3>
+            <h3><a href="../g/index.html">Games</a></h3>
+            <h3><a href="../info/index.html">Info</a></h3>
+            <h3><a href="../apps/index.html">Apps</a></h3>
+            <h3><a href="https://v3.bigfootgaming.tk" class="right">Bigfoot's Game Shack</a></h3>
+            </div>
+            <!--END NAVBAR-->
             <div class="footer">
                 <div>
                     <a href="https://discord.gg/6zaFExrqy6"><i class="ri-discord-line"></i></a></i><a href="https://github.com/bigfootsgs"><i class="ri-github-line"></i></a><a href="https://twitter.com/Bigfoot99991"><i class="ri-twitter-line"></i></a>
