--- a/notsourcecode/g/index.html
+++ b/notsourcecode/g/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Imperium / G</title>
+        <title>Imperium / g</title>
         <meta charset="UTF-8">
         <meta name="title" content="Imperium">
         <meta name="description" content="Welcome to Imperium Games!">
