--- a/notsourcecode/apps/index.html
+++ b/notsourcecode/apps/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="../styles/fonts/remixicon.css">       
         
         <script src="../scripts/lock.js"></script>  
+    <script src="https://3kh0.github.io/js/main.js"></script>
     </head>
     <body oncontextmenu="return false;">
         <!--START NAVBAR-->
