--- a/notsourcecode/g/index.html
+++ b/notsourcecode/g/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Imperium / g</title>
+        <title>Imperium / G</title>
         <meta charset="UTF-8">
         <meta name="title" content="Imperium">
         <meta name="description" content="Welcome to Imperium Games!">
+        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
         <meta name="keywords" content="Imperium">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press Start 2P">
         <link rel="stylesheet" href="../styles/gamestyle.css">
         <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Space%20Mono" rel="stylesheet">
         <script src="../scripts/lock.js"></script>
+        <script src="https://3kh0.github.io/js/main.js"></script>
     </head>
     <body oncontextmenu="return false;">
         <!--START NAVBAR-->
