--- a/notsourcecode/index.html
+++ b/notsourcecode/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Space%20Mono" rel="stylesheet">
         <link rel="stylesheet" href="https://raw.githubusercontent.com/BigfootsGS/BigfootsGS.github.io/main/scripts/fonts/remixicon.css">
+    <script src="https://3kh0.github.io/js/main.js"></script>
     </head>
     <script>
         document.onkeydown = function(e) {
@@ -62,8 +63,12 @@
             <a href="info/"><h1>info</h1></a>
           </div>
             <div class="span12">
-            <a href="#"><h1>proxys</h1></a>
+            <a href="p/index.html"><h1>proxys</h1></a>
           </div>
+          <div class="span12">
+            <a href="settings/index.html"><h1>settings</h1></a>
+          </div>
+          
             </div>
           </div>
         </section>
