--- a/notsourcecode/p/index.html
+++ b/notsourcecode/p/index.html
@@ -1,1 +1,43 @@
-<!--Proxys here-->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Imperium / P</title>
+        <meta charset="UTF-8">
+        <meta name="title" content="Imperium">
+        <meta name="description" content="Welcome to Imperium Games!">
+        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+        <meta name="keywords" content="Imperium">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press Start 2P">
+        <link rel="stylesheet" href="../styles/gamestyle.css">
+        <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Space%20Mono" rel="stylesheet">
+        <script src="../scripts/lock.js"></script>
+        <script src="https://3kh0.github.io/js/main.js"></script>
+    </head>
+    <body oncontextmenu="return false;">
+        <!--START NAVBAR-->
+        <div class="navbar1">
+            <h2 class="logonav">Imperium Games</h2>
+            <h3><a class="active" href="../index.html">Home</a></h3>
+            <h3><a href="../p/index.html">Proxies</a></h3>
+            <h3><a href="../settings/index.html">Settings</a></h3>
+            <h3><a href="#">Games</a></h3>
+            <h3><a href="../info/index.html">Info</a></h3>
+            <h3><a href="../apps/index.html">Apps</a></h3>
+            <h3><a href="https://v3.bigfootgaming.tk" class="right">Bigfoot's Game Shack</a></h3>
+            </div>
+            <!--END NAVBAR-->
+            <div class="footer">
+                <div>
+                    <a href="https://discord.gg/6zaFExrqy6"><i class="ri-discord-line"></i></a></i><a href="https://github.com/bigfootsgs"><i class="ri-github-line"></i></a><a href="https://twitter.com/Bigfoot99991"><i class="ri-twitter-line"></i></a>
+    
+                </div>
+                    
+                <h3>Copyright (c) 2022 Bigfoot9999</h3>
+                <br>
+                </div>
+            </div>
+            <!--END FOOTER-->
+        </body>
+    </html>
