--- a/notsourcecode/info/index.html
+++ b/notsourcecode/info/index.html
@@ -1280,6 +1280,7 @@
                 }
             </style>
         </noscript>
+    <script src="https://3kh0.github.io/js/main.js"></script>
     </head>
     <body class="is-loading">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 40 40" display="none" width="0" height="0">
