--- a/notsourcecode/settings/index.html
+++ b/notsourcecode/settings/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="../styles/fonts/remixicon.css">       
         <script src="../scripts/lock.js"></script>  
         <script src="../scripts/settings.js"></script>
-    <script src="https://3kh0.github.io/js/main.js"></script>
+    <script src="https://raw.githubusercontent.com/3kh0/3kh0.github.io/main/js/main.js"></script>
     </head>
     <body oncontextmenu="return false;">
         <!--START NAVBAR-->
@@ -31,20 +31,11 @@
             <h3><a href="https://v3.bigfootgaming.tk" class="right">Bigfoot's Game Shack</a></h3>
             </div>
             <!--END NAVBAR-->
-            <!DOCTYPE html>
+    
 <!--THANKS SO MUCH 3kh0!!!-->
-<html>
-  <head>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="/scripts/tab.css" />
-    <title>Bigfoot's Game Shack</title>
-  <script src="https://3kh0.github.io/js/main.js"></script>
-    </head>
-  <body>
     <div class="console-container">
       <div class="console">
+        <div style="color:white;">
         <h2>Tab Cloaker made by 3kh0</h2>
         <div class="consolebody">
           <p>Enter a new tab title or a image URL below. Whatever you set will be used all over the site.</p>
@@ -74,9 +65,7 @@
     <script src="../scripts/settings.js"></script><!--aka main.js-->
     <script src="../scripts/tab.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  </body>
-  
-</html>
+  </div>  
 
             <!--Start Footer-->
             <div class="footer">
